hard-gists/fbbdb1ba7c66cc4e1bb2/run.log
=== Docker Run Log for fbbdb1ba7c66cc4e1bb2 ===
Started at: Mi 29. Okt 21:41:11 CET 2025

[2025-10-29 21:41:11] START: Running container for fbbdb1ba7c66cc4e1bb2
[2025-10-29 21:41:12] SUCCESS: Container 849411bc65583a64de5e32188b758a0c70d3aacd84aa358fc739395baabc1007 started for fbbdb1ba7c66cc4e1bb2
=== Container logs for fbbdb1ba7c66cc4e1bb2 ===
  File "/snippet.py", line 27
    print '[+] Download Picture: {}'.format(pic_url)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for fbbdb1ba7c66cc4e1bb2 ===
[2025-10-29 21:41:14] INFO: Container 849411bc65583a64de5e32188b758a0c70d3aacd84aa358fc739395baabc1007 has stopped
